--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
       - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
+      - ELASTICSEARCH_DSL_HOSTS=es:9200
     depends_on:
       - db
+      - es
 
   db:
     image: postgres:13-alpine
@@ -57,3 +59,11 @@ services:
       - db
       - redis
       - app
+
+  es:
+    image: elasticsearch:7.8.1
+    container_name: es
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
