--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ wagtail>=3.0,<3.1
 psycopg2>=2.9.3,<2.10
 celery>=5.2.7,<5.3
 redis>=4.3.4,<4.4
+django-elasticsearch-dsl>=7.2.2,<7.3
+Faker>=13.15.0,<13.16
