removed gunicorn install + combined Dockerfile run commands + added some note to readme

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -18,7 +18,7 @@ services:
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${SECRET_KEY}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-      - ELASTICSEARCH_DSL_HOSTS=es:9200
+      - ELASTICSEARCH_DSL_HOSTS=${ELASTICSEARCH_DSL_HOSTS}
     depends_on:
       - db
       - es
